--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Your Portfolio</title>
+</head>
+<body>
+    <header>
+        <h1>Your Name</h1>
+        <p>Web Developer</p>
+    </header>
+    <section id="projects">
+        <!-- Add your project details here -->
+    </section>
+    <section id="about">
+        <!-- Add information about yourself here -->
+    </section>
+    <section id="contact">
+        <!-- Add contact information here -->
+    </section>
+</body>
+</html>
 
