--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f0f0f0;
+            background-color: #f7f7f7;
         }
 
         header {
-            background-color: #007BFF;
+            background-color: #66a3ff;
             color: #fff;
             text-align: center;
             padding: 30px 0;
@@ -33,24 +33,25 @@
             border-radius: 50%;
             display: block;
             margin: 0 auto;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.3);
         }
 
         section {
             padding: 20px;
             background-color: #fff;
             margin: 20px;
-            border-radius: 5px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            border-radius: 10px;
+            box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
         }
 
         h2 {
-            font-size: 24px;
+            font-size: 28px;
             margin-top: 0;
+            color: #333;
         }
 
         .highlight {
-            color: #007BFF;
+            color: #66a3ff;
             font-weight: bold;
         }
 
@@ -60,7 +61,7 @@
         }
 
         a {
-            color: #007BFF;
+            color: #66a3ff;
             text-decoration: none;
         }
 
@@ -71,7 +72,7 @@
 </head>
 <body>
     <header>
-        <img src="IMG_4043_1.JPG" alt="Your Name">
+        <img src="images/your-photo.jpg" alt="Your Name">
         <h1>Your Name</h1>
         <p>Web Developer</p>
     </header>
@@ -108,4 +109,3 @@
     </section>
 </body>
 </html>
-
