--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 </head>
 <body>
     <header>
-        <img src="images/your-photo.jpg" alt="Your Name">
+        <img src="IMG_4043_1.JPG" alt="Your Name">
         <h1>Your Name</h1>
         <p>Web Developer</p>
     </header>
