--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 										<p>
    											 Teaching Assistance<br>
     											 Programming Design Lab<br>
-    											 Data Sre Lab<br>
+    											 Data Structure Lab Lab<br>
     											 Computer Science and Engineering
 										<p>
 	
